scaffold/typescript-go-main/testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/getJavaScriptSyntacticDiagnostics16.baseline
// === Syntax and Semantic Diagnostics ===
/a.js(1,13): error TS8009: The '?' modifier can only be used in TypeScript files.


==== /a.js (1 errors) ====
    function F(p?) { }
                ~
!!! error TS8009: The '?' modifier can only be used in TypeScript files.